--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 
 <html>
-  <head>
+  <head> 
+    <link rel="manifest" href="/manifest.json">
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+  <script>
+    var OneSignal = window.OneSignal || [];
+    OneSignal.push(["init", {
+      appId: "f7ae9bee-3601-4b5f-9869-71074fe11e16",
+      autoRegister: false,
+      notifyButton: {
+        enable: true /* Set to false to hide */
+      }
+    }]);
+  </script>
     <title>Holiday Calendar</title>
   </head>
   <body>
