--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       autoRegister: true,
       notifyButton: {
         enable: false /* Set to false to hide */
-      },
-      path: '/HolidayCalendar/', /* A trailing slash is required */
+      }
+     /* path: '/HolidayCalendar/', /* A trailing slash is required */
       
     }]);
   </script>
