updates for mobile viewing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
  <!--  <script type="text/javascript" src="js/jquery-ui.js"></script> -->
   <script type="text/javascript" src="js/ngStorage.js"></script>
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
-
+<meta name=viewport content='width=700'>
+  <meta name=viewport content='user-scalable=no'>
   <script>
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
