--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
       appId: "YOUR_APP_ID",
-      autoRegister: false,
+      autoRegister: true,
       notifyButton: {
-        enable: true /* Set to false to hide */
+        enable: false /* Set to false to hide */
       }
     }]);
   </script>
