--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script>
     var OneSignal = window.OneSignal || [];
     OneSignal.push(["init", {
-      appId: "YOUR_APP_ID",
+      appId: "f7ae9bee-3601-4b5f-9869-71074fe11e16",
       autoRegister: true,
       notifyButton: {
         enable: false /* Set to false to hide */
